--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     color: black;
 }
 body{
-    background-size: auto;
+    background-size: cover;
     font-family: 'Tourney', cursive;
 }
 .disko{
